# RAG-

./: .gitignore  pyproject.toml  requirements.txt
notebook/: csv_document.ipynb  documents.ipynb  typesense.ipynb
